[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/UIUpgradePanel/UIUpgradePanel.gd" type="Script" id=1]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 2

[node name="UIUpgradePanel" type="Panel"]
margin_right = 320.0
margin_bottom = 320.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerNameLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 32.0
margin_bottom = 58.0
text = "Tower"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.2
margin_top = 64.0
margin_bottom = 4.0
mouse_filter = 2
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 96.0
margin_right = -32.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponRangeOption" type="HBoxContainer" parent="OptionsContainer"]
margin_right = 256.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsContainer/WeaponRangeOption"]
margin_right = 123.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Weapon Range"
valign = 2
autowrap = true

[node name="UpgradeButton" type="Button" parent="OptionsContainer/WeaponRangeOption"]
margin_left = 133.0
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Upgrade"

[node name="WeaponFireRateOption" type="HBoxContainer" parent="OptionsContainer"]
margin_top = 24.0
margin_right = 256.0
margin_bottom = 44.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Label" type="Label" parent="OptionsContainer/WeaponFireRateOption"]
margin_right = 123.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Weapon Fire Rate"
valign = 2
autowrap = true

[node name="UpgradeButton" type="Button" parent="OptionsContainer/WeaponFireRateOption"]
margin_left = 133.0
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Upgrade"

[node name="BulletSpeedOption" type="HBoxContainer" parent="OptionsContainer"]
margin_top = 48.0
margin_right = 256.0
margin_bottom = 68.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Label" type="Label" parent="OptionsContainer/BulletSpeedOption"]
margin_right = 123.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Bullet Speed"
valign = 2
autowrap = true

[node name="UpgradeButton" type="Button" parent="OptionsContainer/BulletSpeedOption"]
margin_left = 133.0
margin_right = 256.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Upgrade"
[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="hide" from="." to="." method="_on_hide"]
